# askGPT

./: .aider.chat.history.md  .aider.input.history  .gitignore  Dockerfile  Dockerfile.dev  HOOKS.md  LICENSE.md  MANIFEST.in  NOTES.md  README.md  README_tmp.html  RELEASE.md  ROADMAP.md  ROADMAP_tmp.html  askgpt_shell.sh  base64parser.py  config.example  create_dev_image.sh  create_images.sh  create_latest_image.sh  credentials.example  distribute.sh  env.example  genie.py  install.sh  pyproject.toml  release.sh  release_notes_v1.0.0.md  setup.py  setup.py.ignore
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
art/: bot.txt  logo.txt
config/: config.toml.example  default_config.yaml  personas.json  sample_config.yaml
config/examples/: development.yaml  multi-provider.yaml  ollama-only.yaml
examples/: README.md
examples/agents/: README.md  example-analyst.md  example-coder.md
examples/commands/: README.md  example-code-review.md  example-documentation.md  example-test-generator.md
examples/dot.askgpt/: config.json  history.txt
examples/dot.askgpt/agents/: analyst.md  coder.md  creative.md  default.md  h4x0r.md
examples/dot.askgpt/commands/: analyze.md  explain.md  refactor.md  review.md  summarize.md  test.md
examples/skills/: README.md
examples/skills/api-testing/: SKILL.md
examples/skills/data-analysis/: SKILL.md
examples/skills/security-audit-example/: SKILL.md
examples/skills/taskwarrior/: SKILL.md  examples.md
src/: askGPT.py  genie.py
src/askGPT/: __init__.py  builtinsCapabilities.py  capabilities.py  capability.py  cli.py  config.py  main.py  shell.py  tools.py
src/askGPT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/askGPT/api/: openai.py
src/askGPT/commands/: EOF_command.py  capabilities_command.py  capiche_command.py  clone_command.py  config_command.py  continue_command.py  credentials_command.py  delete_command.py  dream_command.py  edit_command.py  exec_command.py  exit_command.py  greetings_command.py  help_command.py  intro_command.py  man_command.py  me_command.py  query_command.py  quit_command.py  recap_command.py  set_command.py  show_command.py  submit_command.py  update_command.py  version_command.py
src/askGPT/data/: README.md  __init__.py  config.toml.example  credentials.example  env.example  scenarios.json  shortcuts.md  test_shell.py  tips.md  welcome.md
src/askGPT/modules/: agent_loader.py  cascade_command_loader.py  command_loader.py  config_integration.py  config_loader.py  config_manager.py  config_validation.py  constants.py  coordinator.py  data_types.py  files.py  hook_executor.py  hook_executor_v2.py  hook_manager.py  hook_manager_simplified.py  hook_types.py  interactive_mode.py  mcp_session_manager.py  model_provider_config.py  model_providers.py  nano_agent.py  nano_agent_runner.py  nano_agent_tools.py  ollama_wrapper.py  output_formats.py  provider_config.py  provider_config_updated.py  provider_implementations.py  session_manager.py  skill_loader.py  token_tracking.py  typing_fix.py  user_tools.py
src/genie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_anthropic_provider.py  test_config_manager.py  test_edit_file.py  test_gpt5_models_production.py  test_list_directory_default.py  test_multi_provider.py  test_ollama_native.py  test_permissions.py  test_provider_integration.py  test_skill_command_integration.py
tests/askgpt/: test_cli_list_models.py
tests/isolated/: README.md  test_multi_provider_openai_sdk.py
(+25 files in other folders)
