[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "askGPT"
version = "0.7.7"
description = "askGPT is a simple command line tool for interacting with OpenAI's API."
authors = ["Meir Michanie <meirm@riunx.com>"]
readme = "README.md"
keywords = ["openai", "gpt-3", "cli", "cmd2"]
  
  
[tool.poetry.dependencies]
python = "^3.7"
openai = "*"
toml = "*"
click = "*"
rich = "*"
backoff = "*"
        
[tool.poetry.classifiers]
[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[project.urls]
"Homepage" = "https://github.com/meirm/askGPT"
"Bug Tracker" = "https://github.com/meirm/askGPT/issues"

[tool.poetry.scripts]
askgpt = "askGPT.main:cli"

