[project]
name = "askgpt"
version = "1.0.0"
description = "askGPT - Multi-provider AI agent CLI with offline-first support"
readme = "README.md"
authors = [
    { name = "Meir Michanie", email = "meirm@riunx.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0", # Note: >=1.99.2 has Union type issue with openai-agents
    "openai-agents>=0.1.0", # Has compatibility issue with openai>=1.99.2, fixed via typing_fix.py
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0", # For enhanced interactive mode with autocompletion
    "pyyaml>=6.0.2",
    "ollama>=0.1.0", # Native Ollama Python client
    "aiohttp>=3.9.0", # For async HTTP requests to provider APIs
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio>=0.23.0",
    "openai>=1.0.0",
]

[project.scripts]
askgpt = "askgpt.cli:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
